[tool.poetry]
name = "twitter-cleanup"
version = "0.1.0"
description = "A tool to delete tweets using Selenium"
authors = ["Martin Krung <mkl@cryptonative.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cleanup = "cleanup:main"
